# MixerNew

./: .env  .gitignore  TECHNICAL_REPORT.md  add-version-manual.mjs  add_isdemo.cjs  apply_demo.cjs  b2-proxy.mjs  capacitor.config.json  check-songs.mjs  codemagic.yaml  dump.html  eslint-output.txt  firestore.rules  fix_hybrid.cjs  fix_mutations.cjs  fix_native_fns.cjs  fix_parsing.cjs  fix_setlist.cjs  index.html  inject_desktop.cjs  inject_desktop_modal.cjs  inject_init.cjs  migrate-audio-to-flac.mjs  package-lock.json  package.json  process_mascots.js  repair_syntax.cjs  replace_audio.cjs  replace_auth.cjs  replace_downloads.cjs  replace_modal.py  restore_mascots.js  restore_missing.cjs  test-db.cjs  test-main.cjs  test-main.js  update_main.cjs  upload-apk-auth.mjs  upload-desktop-exe.mjs  upload-final-apk.mjs  (+1 more)
.github/workflows/: build-apple.yml
ZionAudioCore/: .gitignore  CMakeLists.txt  ZionEngine.cpp  build_wasm.ps1  main.cpp  test.cpp  wasm_stub.cpp
ZionAudioCore/Bridge/: DesktopMixSession.cpp  DesktopMixSession.h  ZionBridge.cpp
ZionAudioCore/Core/: ZionBindings.cpp  ZionCore.cpp  ZionCore.h
ZionAudioCore/Engine/: AudioEngine.cpp  AudioEngine.h
ZionAudioCore/Source/: AudioSourceManager.cpp  AudioSourceManager.h
ZionAudioCore/Transport/: Transport.cpp  Transport.h
ZionAudioCore/src_wasm_out/: zion_audio_core_wasm.wasm
ZionStageApple/: Package.swift
ZionStageApple/Shared/: ZionStageApple-Bridging-Header.h  google-services (5).json
ZionStageApple/Shared/App/: MainView.swift  ZionStageApp.swift
ZionStageApple/Shared/Audio/: MetronomeEngine.swift  NextGenEngineBridge.h  NextGenEngineBridge.mm  ZionAudioPlayer.swift  ZionPadPlayer.swift
ZionStageApple/Shared/Models/: Setlist.swift  Song.swift  UserProfile.swift
ZionStageApple/Shared/Services/: BandSyncService.swift  DownloadManager.swift  FirebaseService.swift  OfflineStorageManager.swift  SongMapService.swift  TransposerService.swift
ZionStageApple/Shared/Views/Auth/: LoginView.swift
ZionStageApple/Shared/Views/Lyrics/: ChordsView.swift  LyricsView.swift  PartiturasView.swift
ZionStageApple/Shared/Views/Mixer/: ChannelStripView.swift  CyberHeaderView.swift  HorizontalMixerView.swift  MetronomePanelView.swift  MixerView.swift  PerformanceModeView.swift  (+3 more)
ZionStageApple/ZionStageApple.xcodeproj/: project.pbxproj
ZionStageDesktop/: CMakeLists.txt
ZionStageDesktop/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
ZionStageDesktop/Source/Audio/: DesktopMixSession.cpp  DesktopMixSession.h  MidiManager.h  ZionAudioEngine.cpp  ZionAudioEngine.h  ZionDesktopBridge.cpp  ZionDesktopBridge.h
ZionStageDesktop/Source/Managers/: DownloadManager.cpp  DownloadManager.h  EncryptedCacheManager.cpp  EncryptedCacheManager.h  LicenseManager.cpp  LicenseManager.h  MetadataDB.h  SetlistManager.h
ZionStageDesktop/Source/UI/: SongLibraryComponent.h  ZionMixerComponent.h
ZionStageDesktop/tools/: generate_license.py
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  MixerNativeEngine.cpp  NextGenMultitrackEngine.cpp  NextGenMultitrackEngine.h
electron/: EncryptedCacheService.cjs  bandSyncServer.cjs  db.cjs  main.cjs  preload.cjs
ios/App/App/: GoogleService-Info.plist  Info.plist
ios/App/App.xcodeproj/: project.pbxproj
ios/App/CapApp-SPM/: Package.swift
public/: app-latest-desktop.json  app-latest.json  informe_zion_stage.html  manifest.json  sw.js  zion-worklet.js
public/wasm/: zion_audio_core_wasm.js  zion_audio_core_wasm.wasm
scratch/: analyze_wav.py  check_all_robust.cjs  check_all_robust_line.cjs  check_balance.cjs  check_div_balance_2413.cjs  check_div_balance_2442.cjs  check_div_balance_2658.cjs  check_div_balance_3075.cjs  check_div_balance_3420.cjs  check_div_balance_3725.cjs  check_div_balance_at_line.cjs  check_div_balance_mid.cjs  check_div_line.cjs  check_qrcode_exports.js  check_strings.cjs  compare-songs.mjs  count_braces.cjs  count_divs.cjs  count_parens.cjs  find-levanto-admin.mjs  find-levanto.mjs  find_extra.cjs  find_extra_braces_robust.cjs  find_extra_robust.cjs  find_unclosed_divs.cjs  query-users.mjs  read_db.js  read_db_admin.js  reporte_vip.mjs  reporte_vip_output.csv  test-track-url.mjs  test_base64.js
scripts/: dev-desktop.mjs  ensure-firebase-admin-credential.mjs  install-debug.cmd  launch-zion-stage.mjs  logcat-mixer-nextgen-verbose.cmd  logcat-mixer-nextgen.cmd  logcat-mixer-solo.bat  logcat-mixer-warnings.bat  open-logcat.cmd  release-desktop-bump.mjs  run-electron-builder-win.mjs
src/: App.jsx  AudioEngine.js  BandSyncEngine.js  BandSyncPluginWeb.js  DesktopAudioBridge.js  LocalFileManager.js  NativeEngine.js  NextGenMixerPluginWeb.js  NextGenNativeEngine.js  PadEngine.js  firebase.js  index.css  main.jsx  mixerApiBase.js  mixerStemRoles.js  nextGenPlaybackUi.js  stripeClient.js
src/components/: ChordViewer.jsx  ExercisePlayer.jsx  Footer.jsx  HorizontalMixer.jsx  LanguageSwitch.jsx  Logo.jsx  Metronome.jsx  Mixer.jsx  PageNavBar.jsx  PerformanceModeView.jsx  PitchExercise.jsx  PlayStoreTestPromoModal.jsx  ProgressBar.jsx  WaveformCanvas.jsx
src/desktop/: DesktopLoginGate.jsx  DesktopModeProvider.jsx  DesktopProSubscribeModal.jsx  DesktopSessionService.js  EncryptedCacheService.js  LicenseManager.js  LocalAuthService.js  LocalLibraryService.js  NativeAudioBridge.js  desktopProPlans.js
src/i18n/: config.js
src/i18n/locales/: en.js  es.js
src/pages/: About.jsx  Academy.jsx  Admin.jsx  BandStage.jsx  Checkout.jsx  Contact.jsx  Dashboard.jsx  DeleteAccount.jsx  DesktopMultitrack.jsx  Landing.jsx  Library.jsx  Manual.jsx  Multitrack.jsx  NextGenTest.jsx  Privacy.jsx  Recursos.jsx  RecursosAudio.jsx  SellerProfile.jsx  Software.jsx  Store.jsx  Terms.jsx  Vendedores.jsx
src/styles/: design-system.css
src/utils/: SongMapService.js  academyAudio.js  barGridClickDetect.js  barGridLoadClickBuffer.js  barGridResolveSong.js  desktopInstallerUrl.js  desktopTelemetry.js  lyricsExtractor.js  publicAssets.js  semverReleaseCompare.js  transposer.js  usageMetrics.js
src/wasm/: zion_audio_core_wasm.js
src/worklets/: soundtouch-worklet.js
(+8 files in other folders)
